@@ -9,6 +9,7 @@ importFrom("graphics", abline, arrows, axTicks, axis, axis.POSIXct,
 importFrom("stats",
 	   IQR, approx, as.formula, as.ts, dchisq, dgamma, density.default,
 	   dnorm, dummy.coef, ecdf, end, fitted, formula, is.ts, lowess,
+           loess, loess.control,
 	   mad, median, model.frame, na.exclude, na.omit, napredict,
 	   pchisq, pf, plot.ts, predict, qchisq, qgamma, qnorm, qt, quantile,
 	   resid, residuals, smooth.spline, spline, splinefun, start, stepfun,
@@ -71,10 +72,11 @@ export (
 	"last",
 	"linesHyperb.lm",
 	"list2mat",
+    loessDemo,
 	"lseq",
 	"margin2table",
 	"mat2tex",
-    "missingCh",
+    missingCh,
 	"mpl",
 	"mult.fig",
 ## FIXME: This is deprecated (but was never announced anyway...) :
