@@ -9,6 +9,8 @@
     \itemize{
       \item new function \code{read.org.table()} to read emacs
       \file{org} files via \code{\link{read.table}()}.
+      \item new \code{loessDemo()}, providing a version of an old
+      \code{loess.demo()}.
     }
   }
 }
